--- a/core/templates/main.html
+++ b/core/templates/main.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,8 +6,181 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="{% static 'style.css' %}">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="../static/index.js"></script>
 </head>
 <body>
-    <h1>Success signing</h1>
+<!---
+    <div class="wrapper-left">
+      <div class="sidebar-left">
+        <div class="grid-sidebar" style="margin-top: 12px">
+          <div class="icon-sidebar-align">
+            
+          </div>
+        </div>
+        <div class="grid-sidebar" style="margin-top: 12px">
+          <div class="icon-sidebar-align">
+            <img src="https://i.ibb.co/6tKFLWG/home.png" alt="" height="26.25px" width="26.25px" />
+          </div>
+          <div>
+            <p style="margin-top: 4px"><strong>Inicio</strong></p>
+          </div>
+        </div>
+
+        <div class="grid-sidebar bg-active">
+          <div class="icon-sidebar-align">
+            <img src="https://i.ibb.co/G7jRx4j/hash.png" alt="" height="26.25px" width="26.25px" />
+          </div>
+
+          <div>
+            <p style="margin-top: 4px"><strong>Explorar</strong></p>
+          </div>
+        </div>
+
+        <div class="grid-sidebar">
+          <div class="icon-sidebar-align">
+            <img
+              src="https://i.ibb.co/Gsr7qyX/notification.png"
+              alt=""
+              height="26.25px"
+              width="26.25px"
+            />
+          </div>
+
+          <div>
+            <p style="margin-top: 4px"><strong>Notificaciones</strong></p>
+          </div>
+        </div>
+        <div class="grid-sidebar">
+          <div class="icon-sidebar-align">
+            <img src="https://i.ibb.co/b2zRPbZ/email.png" alt="" height="26.25px" width="26.25px" />
+          </div>
+
+          <div>
+            <p style="margin-top: 4px"><strong>Mensajes</strong></p>
+          </div>
+        </div>
+
+        <div class="grid-sidebar">
+          <div class="icon-sidebar-align">
+            <img src="https://i.ibb.co/znTXjv6/perfil.png" alt="" height="26.25px" width="26.25px" />
+          </div>
+
+          <div>
+            <p style="margin-top: 4px"><strong>Perfil</strong></p>
+          </div>
+        </div>
+
+        <div class="grid-sidebar">
+          <div class="icon-sidebar-align">
+            <img src="https://i.ibb.co/gS5z544/opciones.png" alt="" />
+          </div>
+
+          <div>
+            <p style="margin-top: 4px"><strong>Más opciones</strong></p>
+          </div>
+        </div>
+
+        <button class="button-twittear">
+          <strong>Twittear</strong>
+        </button>
+
+        <div class="box-user">
+          <div class="grid-user">
+            <div>
+              <img
+                src="https://avatars2.githubusercontent.com/u/50471203?s=460&amp;u=809f0f59820b71e1cb328f42d3af2efa49de33db&amp;v=4"
+                alt="user"
+                class="img-user"
+              />
+            </div>
+            <div>
+              <p class="name"><strong>Nelson</strong></p>
+              <p class="username">@nelsonher019</p>
+            </div>
+            <div class="mt-arrow">
+              <img
+                src="https://i.ibb.co/mRLLwdW/arrow-down.png"
+                alt=""
+                height="18.75px"
+                width="18.75px"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    -->
+
+ <div class="d-flex" id="wrapper">
+        <!-- Sidebar -->
+        <div class="bg-white" id="sidebar-wrapper">
+            <div class="sidebar-heading text-center py-4 primary-text fs-4 fw-bold text-uppercase border-bottom"><i
+                    class="fas fa-user-secret me-2"></i>Codersbite</div>
+            <div class="list-group list-group-flush my-3">
+                <a href="#" class="list-group-item list-group-item-action bg-transparent second-text active"><i
+                        class="fas fa-tachometer-alt me-2"></i>Dashboard</a>
+                <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
+                        class="fas fa-project-diagram me-2"></i>Projects</a>
+                <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
+                        class="fas fa-chart-line me-2"></i>Analytics</a>
+                <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
+                        class="fas fa-paperclip me-2"></i>Reports</a>
+                <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
+                        class="fas fa-shopping-cart me-2"></i>Store Mng</a>
+                <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
+                        class="fas fa-gift me-2"></i>Products</a>
+                <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
+                        class="fas fa-comment-dots me-2"></i>Chat</a>
+                <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
+                        class="fas fa-map-marker-alt me-2"></i>Outlet</a>
+                <a href="#" class="list-group-item list-group-item-action bg-transparent text-danger fw-bold"><i
+                        class="fas fa-power-off me-2"></i>Logout</a>
+            </div>
+        </div>
+        <!-- /#sidebar-wrapper -->
+
+        <!-- Page Content -->
+        <div id="page-content-wrapper">
+            <nav class="navbar navbar-expand-lg navbar-light bg-transparent py-4 px-4">
+                <div class="d-flex align-items-center">
+                    <i class="fas fa-align-left primary-text fs-4 me-3" id="menu-toggle"></i>
+                    <h2 class="fs-2 m-0">Dashboard</h2>
+                </div>
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle second-text fw-bold" href="#" id="navbarDropdown"
+                                role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="fas fa-user me-2"></i>John Doe
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        var el = document.getElementById("wrapper");
+        var toggleButton = document.getElementById("menu-toggle");
+
+        toggleButton.onclick = function () {
+            el.classList.toggle("toggled");
+        };
+    </script>
 </body>
 </html>
