--- a/core/templates/main.html
+++ b/core/templates/main.html
@@ -15,117 +15,15 @@
     <script src="../static/index.js"></script>
 </head>
 <body>
-<!---
-    <div class="wrapper-left">
-      <div class="sidebar-left">
-        <div class="grid-sidebar" style="margin-top: 12px">
-          <div class="icon-sidebar-align">
-            
-          </div>
-        </div>
-        <div class="grid-sidebar" style="margin-top: 12px">
-          <div class="icon-sidebar-align">
-            <img src="https://i.ibb.co/6tKFLWG/home.png" alt="" height="26.25px" width="26.25px" />
-          </div>
-          <div>
-            <p style="margin-top: 4px"><strong>Inicio</strong></p>
-          </div>
-        </div>
-
-        <div class="grid-sidebar bg-active">
-          <div class="icon-sidebar-align">
-            <img src="https://i.ibb.co/G7jRx4j/hash.png" alt="" height="26.25px" width="26.25px" />
-          </div>
-
-          <div>
-            <p style="margin-top: 4px"><strong>Explorar</strong></p>
-          </div>
-        </div>
-
-        <div class="grid-sidebar">
-          <div class="icon-sidebar-align">
-            <img
-              src="https://i.ibb.co/Gsr7qyX/notification.png"
-              alt=""
-              height="26.25px"
-              width="26.25px"
-            />
-          </div>
-
-          <div>
-            <p style="margin-top: 4px"><strong>Notificaciones</strong></p>
-          </div>
-        </div>
-        <div class="grid-sidebar">
-          <div class="icon-sidebar-align">
-            <img src="https://i.ibb.co/b2zRPbZ/email.png" alt="" height="26.25px" width="26.25px" />
-          </div>
-
-          <div>
-            <p style="margin-top: 4px"><strong>Mensajes</strong></p>
-          </div>
-        </div>
-
-        <div class="grid-sidebar">
-          <div class="icon-sidebar-align">
-            <img src="https://i.ibb.co/znTXjv6/perfil.png" alt="" height="26.25px" width="26.25px" />
-          </div>
-
-          <div>
-            <p style="margin-top: 4px"><strong>Perfil</strong></p>
-          </div>
-        </div>
-
-        <div class="grid-sidebar">
-          <div class="icon-sidebar-align">
-            <img src="https://i.ibb.co/gS5z544/opciones.png" alt="" />
-          </div>
-
-          <div>
-            <p style="margin-top: 4px"><strong>Más opciones</strong></p>
-          </div>
-        </div>
-
-        <button class="button-twittear">
-          <strong>Twittear</strong>
-        </button>
-
-        <div class="box-user">
-          <div class="grid-user">
-            <div>
-              <img
-                src="https://avatars2.githubusercontent.com/u/50471203?s=460&amp;u=809f0f59820b71e1cb328f42d3af2efa49de33db&amp;v=4"
-                alt="user"
-                class="img-user"
-              />
-            </div>
-            <div>
-              <p class="name"><strong>Nelson</strong></p>
-              <p class="username">@nelsonher019</p>
-            </div>
-            <div class="mt-arrow">
-              <img
-                src="https://i.ibb.co/mRLLwdW/arrow-down.png"
-                alt=""
-                height="18.75px"
-                width="18.75px"
-              />
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    -->
 
  <div class="d-flex" id="wrapper">
         <!-- Sidebar -->
         <div class="bg-white" id="sidebar-wrapper">
-            <div class="sidebar-heading text-center py-4 primary-text fs-4 fw-bold text-uppercase border-bottom"><i
-                    class="fas fa-user-secret me-2"></i>Codersbite</div>
+            <div class="sidebar-heading text-center py-4 custom-text fs-3 fw-bold border-bottom"><i
+                    class="fas fa-user-secret me-2"></i>Fairy</div>
             <div class="list-group list-group-flush my-3">
-                <a href="#" class="list-group-item list-group-item-action bg-transparent second-text active"><i
-                        class="fas fa-tachometer-alt me-2"></i>Dashboard</a>
+                <a href="#" class="list-group-item list-group-item-action bg-transparent second-text glavnaya"><i
+                        class="fas fa-tachometer-alt me-2"></i>Главная</a>
                 <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
                         class="fas fa-project-diagram me-2"></i>Projects</a>
                 <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
@@ -140,8 +38,9 @@
                         class="fas fa-comment-dots me-2"></i>Chat</a>
                 <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
                         class="fas fa-map-marker-alt me-2"></i>Outlet</a>
-                <a href="#" class="list-group-item list-group-item-action bg-transparent text-danger fw-bold"><i
-                        class="fas fa-power-off me-2"></i>Logout</a>
+                <a href="{% url 'logout' %}" class="list-group-item list-group-item-action bg-transparent text-danger fw-bold"><i
+                        class="fas fa-power-off me-2"></i>{% if request.user.is_authenticated %}Выйти{% endif %}</a>
+                {% if not request.user.is_authenticated %}<button class="btn-custom"><a href="{% url 'sign-in' %}">Войти</a></button>{% endif %}
             </div>
         </div>
         <!-- /#sidebar-wrapper -->
@@ -151,7 +50,7 @@
             <nav class="navbar navbar-expand-lg navbar-light bg-transparent py-4 px-4">
                 <div class="d-flex align-items-center">
                     <i class="fas fa-align-left primary-text fs-4 me-3" id="menu-toggle"></i>
-                    <h2 class="fs-2 m-0">Dashboard</h2>
+                    <h2 class="fs-2 m-0">Главная</h2>
                 </div>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -165,7 +64,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle second-text fw-bold" href="#" id="navbarDropdown"
                                 role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                <i class="fas fa-user me-2"></i>John Doe
+                                <i class="fas fa-user me-2"></i>{{ user.username }}
                             </a>
                         </li>
                     </ul>
