--- a/core/templates/main.html
+++ b/core/templates/main.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fairy</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
@@ -25,7 +25,7 @@
                 <a href="#" class="list-group-item list-group-item-action bg-transparent second-text glavnaya"><i
                         class="fas fa-tachometer-alt me-2"></i>Главная</a>
                 <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
-                        class="fas fa-project-diagram me-2"></i>Projects</a>
+                        class="fas fa-project-diagram me-2"></i>Интересное</a>
                 <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
                         class="fas fa-chart-line me-2"></i>Analytics</a>
                 <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
@@ -48,11 +48,9 @@
         <!-- Page Content -->
         <div id="page-content-wrapper">
             <nav class="navbar navbar-expand-lg navbar-light bg-transparent py-4 px-4">
-                <div class="d-flex align-items-center">
-                    <i class="fas fa-align-left primary-text fs-4 me-3" id="menu-toggle"></i>
-                    <h2 class="fs-2 m-0">Главная</h2>
+                <div class="d-flex align-items-right">
+                    <h1 class="zago-custom">Главная</h1>
                 </div>
-
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -70,7 +68,29 @@
                     </ul>
                 </div>
             </nav>
+            
+                {% for public in publics %}
+                    <div class="main-public">
+                        <div class="main-public2">
+                            <h1 class="public-zago">{{ public.title }}</h1>
+                            <p class="public-text">{{ public.text }}</p>
+                            <input id="toggle-heart" type="checkbox"/>
+                            <label for="toggle-heart" aria-label="like">❤ {{ public.likes }} Лайков</label>
 
+                            <ul>
+                                <li data-id="{{ like_obj.id }}" data-type="article" data-action="like" title="Нравится">
+                                    <span class="glyphicon glyphicon-thumbs-up"></span>
+                                    <span data-count="like">{{ like_obj.votes.likes.count }}</span>
+                                </li>
+                                <li data-id="{{ like_obj.id }}" data-type="article" data-action="dislike" title="Не нравится">
+                                    <span class="glyphicon glyphicon-thumbs-down"></span>
+                                    <span data-count="dislike">{{ like_obj.votes.dislikes.count }}</span>
+                                </li>
+                        </ul>
+                        </div>
+                    </div>
+                {% endfor %}
+            
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
