added function dislike

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -31,9 +31,13 @@
               </div>
               <div class="input-container ic2">
                 <input id="password" class="input" type="password" placeholder="Пароль" name="password">
-                <div class="cut"></div>
+                <div class="cut">
+                </div>
               </div>
               <button type="text" class="submit">Войти</button>
+               <div class="subtitle2">
+                <a href="{% url 'register' %}" class="register_class">Зарегистрироваться</a>
+              </div>
           </form>
         </div>
       </div>
