--- a/core/templates/register.html
+++ b/core/templates/register.html
@@ -31,6 +31,9 @@
                 <div class="cut"></div>
               </div>
               <button type="text" class="submit">Зарегистрироваться</button>
+              <div class="subtitle2">
+                <a href="{% url 'sign-in' %}" class="register_class">Войти</a>
+              </div>
           </form>
         </div>
       </div>
