--- a/core/templates/main.html
+++ b/core/templates/main.html
@@ -19,10 +19,9 @@
  <div class="d-flex" id="wrapper">
         <!-- Sidebar -->
         <div class="bg-white" id="sidebar-wrapper">
-            <div class="sidebar-heading text-center py-4 custom-text fs-3 fw-bold border-bottom"><i
-                    class="fas fa-user-secret me-2"></i>Fairy</div>
+            <div class="sidebar-heading text-center py-4 custom-text fs-3 fw-bold border-bottom"><i></i>Fairy</div>
             <div class="list-group list-group-flush my-3">
-                <a href="#" class="list-group-item list-group-item-action bg-transparent second-text glavnaya"><i
+                <a href="{% url 'main' %}" class="list-group-item list-group-item-action bg-transparent second-text glavnaya"><i
                         class="fas fa-tachometer-alt me-2"></i>Главная</a>
                 <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
                         class="fas fa-project-diagram me-2"></i>Интересное</a>
@@ -80,7 +79,24 @@
                     </div>
                     
                 {% endfor %}
-            
+
+
+    <!-- Footer -->
+     <div class="footer-basic">
+        <footer>
+            <h1 class="zago_footer">Fairy</h1>
+            <ul class="list-inline">
+                <li class="list-inline-item"><a href="#">Home</a></li>
+                <li class="list-inline-item"><a href="#">Services</a></li>
+                <li class="list-inline-item"><a href="#">About</a></li>
+                <li class="list-inline-item"><a href="#">Terms</a></li>
+                <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
+            </ul>
+            <p class="copyright">Fairy © 2021</p>
+        </footer>
+    </div>
+
+        
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
