--- a/core/templates/main.html
+++ b/core/templates/main.html
@@ -82,19 +82,12 @@
 
 
     <!-- Footer -->
-     <div class="footer-basic">
-        <footer>
-            <h1 class="zago_footer">Fairy</h1>
-            <ul class="list-inline">
-                <li class="list-inline-item"><a href="#">Home</a></li>
-                <li class="list-inline-item"><a href="#">Services</a></li>
-                <li class="list-inline-item"><a href="#">About</a></li>
-                <li class="list-inline-item"><a href="#">Terms</a></li>
-                <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
-            </ul>
-            <p class="copyright">Fairy © 2021</p>
-        </footer>
-    </div>
+     <footer>
+  Made by <a href="https://www.twitter.com/ckor">Aibekov Islam<br>
+  </a>
+  <p>---------------------------------------</p>
+</footer>
+
 
         
 
