--- a/core/static/style.css
+++ b/core/static/style.css
@@ -28,6 +28,7 @@ body{
   margin-left: 30px;
 }
 
+
 .title {
   color: rgb(10, 10, 10);
   font-size: 36px;
@@ -351,4 +352,16 @@ footer a {
   color: #FE4B74;
   font-weight: 500;
   text-decoration: none;
+}
+
+
+.yo{
+  position: relative;
+  left: 140px;
+  justify-content: center;
+}
+
+.yo2{
+  display: flex;
+  margin-bottom: 40px;
 }
