--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -81,9 +81,8 @@
 
  <!-- Footer -->
      <footer>
-  Made by <a href="https://www.twitter.com/ckor">Aibekov Islam<br>
+  Made by <a href="#">Aibekov Islam<br>
   </a>
-  <p>---------------------------------------</p>
 </footer>
 
 
