--- a/core/static/style.css
+++ b/core/static/style.css
@@ -341,6 +341,8 @@ body{
 
 
 footer {
+  position: relative;
+  left: 100px;
   padding: 1% 5%;
   text-align:center;
   background-color: white;
@@ -365,3 +367,10 @@ footer a {
   display: flex;
   margin-bottom: 40px;
 }
+
+
+
+
+
+
+
