--- a/core/static/style.css
+++ b/core/static/style.css
@@ -8,6 +8,7 @@
 body{
   font-family: 'Montserrat', sans-serif;
   color: #000000;
+  background-color: #f0f2f5;
 }
 
 .zago{
@@ -90,7 +91,7 @@ body{
   cursor: pointer;
   font-size: 18px;
   height: 50px;
-  margin-top: 30px;
+  margin-top: 13px;
   outline: 0;
   text-align: center;
   width: 100%;
