--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -27,8 +27,10 @@
                         class="fas fa-project-diagram me-2"></i>Интересное</a>
                 <a href="{% url 'publish' %}" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
                         class="fas fa-chart-line me-2"></i>Опубликовать</a>
-                <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
-                        class="fas fa-paperclip me-2"></i>Reports</a>
+                {% for authors in author %}
+                    <a href="{% url 'authors' authors.id %}" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
+                            class="fas fa-paperclip me-2"></i>Авторы</a>
+                {% endfor %}
                 <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
                         class="fas fa-shopping-cart me-2"></i>Store Mng</a>
                 <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
