--- a/core/templates/main.html
+++ b/core/templates/main.html
@@ -7,6 +7,7 @@
                             <p class="public-text">{{ public.text }}</p>
                             <label for="toggle-heart" aria-label="like"><a href="{% url 'add_like' public.pk %}" class="like">❤</a> {{ public.likes }} Лайков</label>
                             <label for="toggle-heart" aria-label="like"><a href="{% url 'add_dislike' public.pk %}" class="like">👎🏻</a> {{ public.dislikes }} Дизлайки</label>
+                            <label for="toggle-heart" aria-label="like"><a href="#" class="like">🧔🏽</a> {{ public.author.nik }}</label>
                         </div>
                     </div> 
                 {% endfor %}
