--- a/core/static/style.css
+++ b/core/static/style.css
@@ -3,6 +3,11 @@
 
 @font-face {font-family: "Peace Sans"; src: url("//db.onlinewebfonts.com/t/2a32094b74bdd4607c616294a8a90740.eot"); src: url("//db.onlinewebfonts.com/t/2a32094b74bdd4607c616294a8a90740.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/2a32094b74bdd4607c616294a8a90740.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/2a32094b74bdd4607c616294a8a90740.woff") format("woff"), url("//db.onlinewebfonts.com/t/2a32094b74bdd4607c616294a8a90740.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/2a32094b74bdd4607c616294a8a90740.svg#Peace Sans") format("svg"); }
 
+input, textarea {
+  outline: none;
+  border: none;
+  border: solid 1px #f2f2f2;
+  }
 
 
 body{
@@ -271,10 +276,26 @@ body{
 
 .like{
   text-decoration: none;
+  transition-duration: 0.3s;
+}
+
+.like:hover{
+  font-size: 20px;
+  transition-duration: 0.3s;
 }
 
 
+.likes{
+  text-decoration: none;
+  color: red;
+  transition-duration: 0.3s;
+}
 
+.likes:hover{
+  font-size: 20px;
+  color: red;
+  transition-duration: 0.3s;
+}
 
 
 
@@ -435,4 +456,10 @@ footer a {
   left: 750px;
   bottom: 300px;
   font-size: 50px;
+}
+
+.delete-btn{
+  text-decoration: none;
+  color: #000000;
+  padding-right: 5px;
 }
