--- a/core/templates/publish.html
+++ b/core/templates/publish.html
@@ -10,6 +10,7 @@
             {% csrf_token %}
             <input type="text" class="input-publish" name="title" placeholder="Заголовок">
             <textarea name="text" id="text-publish" cols="43" rows="5" placeholder="Описание"></textarea>
+            <input type="file" name="image">
             <button class="btn-publish">Опубликовать</button>
           </form>
         </div>
