--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -18,7 +18,7 @@
 
     <div class="d-flex" id="wrapper">
             <div class="bg-white" id="sidebar-wrapper">
-                <div class="sidebar-heading text-center py-4 custom-text fs-3 fw-bold border-bottom"><i></i>Fairy</div>
+                <div class="sidebar-heading text-center py-4 custom-text fs-3 fw-bold border-bottom"><i></i>Fairy Fire</div>
                 <div class="list-group list-group-flush my-3">
                     <a href="{% url 'main' %}" class="list-group-item list-group-item-action bg-transparent second-text glavnaya"><i
                             class="fas fa-tachometer-alt me-2"></i>Главная</a>
