--- a/core/templates/main.html
+++ b/core/templates/main.html
@@ -6,8 +6,8 @@
                             <h1 class="public-zago">{{ public.title }}</h1>
                             <img {% if public.image %} src="{{ public.image.url }}"{% endif %} alt="Картинка статьи" class="img img-fluid">
                             <p class="public-text">{{ public.text }}</p>
-                            <label for="toggle-heart" aria-label="like"><a href="{% url 'add_like' public.pk %}" class="like">❤</a> {{ public.likes }} Лайков</label>
-                            <label for="toggle-heart" aria-label="like"><a href="{% url 'add_dislike' public.pk %}" class="like">👎🏻</a> {{ public.dislikes }} Дизлайки</label>
+                            <label for="toggle-heart" aria-label="like"><a href="{% url 'add_like' public.pk %}" class="like">💚</a> {{ public.likes }} Лайков</label>
+                            <label for="toggle-heart" aria-label="like"><a href="{% url 'add_dislike' public.pk %}" class="like">👎🏼</a> {{ public.dislikes }} Дизлайки</label>
                             <label for="toggle-heart" aria-label="like"><a href="#" class="like">🧔🏽</a> {{ public.author.nik }}</label>
                             {% if user.is_authenticated %}
                                 <label for="toggle-heart" aria-label="like"><a href="{% url 'delete_publics' public.id %}" class="likes">🚯 Удалить</a></label>
