--- a/core/templates/register.html
+++ b/core/templates/register.html
@@ -13,8 +13,8 @@
     <div class="container">
     <div class="row align-items-center">
       <div class="col-6">
-        <h1 class="zago">Fairy</h1>
-        <h3>Fairy помогает вам всегда оставаться на связи и общаться со своими знакомыми.</h3>
+        <h1 class="zago">Fairy Fire</h1>
+        <h3>Fairy Fire помогает вам всегда оставаться на связи и общаться со своими знакомыми.</h3>
       </div>
       <div class="col-6">
         <div class="form">
