added model comments

--- a/core/templates/publish.html
+++ b/core/templates/publish.html
@@ -4,7 +4,7 @@
   
 <div class="container">
   <div class="row align-items-center">
-      <div class="col-sm-6">
+      <div class="col">
         <div class="form-publish">
           <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
@@ -17,11 +17,6 @@
             <button class="btn-publish">Опубликовать</button>
           </form>
         </div>
-      <div class="col-sm-6">
-        <div class="zago-public">
-          <h1>Публикуй все!</h1>
-        </div>
-      </div>
     </div>
   </div>
 </div>
