--- a/core/static/style.css
+++ b/core/static/style.css
@@ -414,12 +414,10 @@ footer a {
 
 
 .form-publish{
-  display: flex;
   width: 100%;
   height: 100%;
   margin-top: 60px;
   margin-left: 100px;
-  justify-content: center;
 }
 
 .input-publish{
@@ -456,13 +454,8 @@ footer a {
   transition-duration: 0.3s;
 }
 
-.zago-public h1{
-  position: relative;
-  left: 750px;
-  bottom: 300px;
-  font-size: 50px;
-}
 
+/* DELETE КНОПКА ПУБЛИКАЦИИ*/
 .delete-btn{
   text-decoration: none;
   color: #000000;
